// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<span
  class="dscField--noResults"
  title="Geo point field"
>
  <div
    aria-label="Geo point field"
    data-euiicon-type="globe"
  />
  <span
    class="dscFieldName"
  >
    t.t.test
  </span>
</span>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<span
  class=""
  title="Number field"
>
  <div
    aria-label="Number field"
    data-euiicon-type="number"
  />
  <span
    class="dscFieldName"
  >
    test.test.test
  </span>
</span>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<span
  class=""
  title="String field"
>
  <div
    aria-label="String field"
    data-euiicon-type="string"
  />
  <span
    class="dscFieldName"
  >
    test
  </span>
</span>
`;
